Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Magic-viewer by mbarberot</title>
+    <title>MTG-Grimoire by mbarberot</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Magic-viewer</h1>
+        <h1>MTG-Grimoire</h1>
         <h2>Yet another app for Magic card game.</h2>
         <a href="https://github.com/mbarberot/mtg-grimoire" class="button"><small>View project on</small> GitHub</a>
       </div>
